# Speechflow.ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_REFERENCE.md  README.md  README_AGENT.md  pyproject.toml  render.yaml  requirements.txt  requirements_agent.txt  run.bat  run.sh  server.py
agent/: llm.py  stt.py  tts.py  voice_pipeline.py
demo/: README.md  app.py  requirements.txt
examples/: device_examples.py  export.py  phoneme_example.py
speechflow/: __init__.py  __main__.py  istftnet.py  model.py  pipeline.py
speechflow.js/: README.md  package-lock.json  package.json  rollup.config.js
speechflow.js/demo/: README.md  index.html  package-lock.json  package.json
speechflow.js/demo/src/: App.jsx  worker.js
speechflow.js/src/: phonemize.js  speechflow.js  voices.js
speechflow.js/tests/: splitting.test.js
static/: index.html
tests/: test_custom_stft.py
